# Praca-magisterska

./: README.md
Na Raspberry Pi/: publish_tf4.py  ultrasound.py
Na Raspberry Pi/motor_control/src/motor_control/: package.xml  setup.py
Na Raspberry Pi/motor_control/src/motor_control/launch/: ekf_launch.py  imu_filter_launch.py  robot_imu_ekf_launch.py
Na Raspberry Pi/motor_control/src/motor_control/motor_control/: 4_motors.py  imu_publisher.py  motor_reversed.py  motors_arrows.py  three_motors_controller.py
robot/src/robot-magisterka/: CMakeLists.txt  package.xml
robot/src/robot-magisterka/config/: joystick.yaml  mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml  slamtoolbox.yaml
robot/src/robot-magisterka/description/: lidar.xacro  robot.urdf.xacro  robot_core.xacro  robot_core_ver_mm.xacro  ros2_mm_control.xacro
robot/src/robot-magisterka/launch/: joystick.launch.py  launch_robot.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  rsp.launch.py
robot_symulacja/src/robot_components/: CMakeLists.txt  package.xml
robot_symulacja/src/robot_components/urdf/: slamtec_rplidar_a2.urdf.xacro  slamtec_rplidar_a3.urdf.xacro  slamtec_rplidar_s1.urdf.xacro
robot_symulacja/src/robot_ros/rosbot_description/: package.xml
robot_symulacja/src/robot_ros/rosbot_description/meshes/: body.stl  wheel.stl
robot_symulacja/src/robot_ros/rosbot_description/settings/: joy2twist.yaml  nav2_params.yaml  nav2_params_webots.yaml  slam_toolbox.yaml  slam_toolbox_webots.yaml
robot_symulacja/src/robot_ros/rosbot_description/urdf/: body.urdf.xacro  rosbot.urdf  rosbot.urdf.xacro  rosbot_macro.urdf.xacro  wheel.urdf.xacro
robot_symulacja/src/robot_symulacja/: package.xml  setup.py
robot_symulacja/src/robot_symulacja/launch/: symulacja.py
robot_symulacja/src/robot_symulacja/protos/: Rosbot.proto  RpLidarA2.proto
robot_symulacja/src/robot_symulacja/resource/: ekf.yaml  laser_filter.yaml  rosbot_controllers.yaml
robot_symulacja/src/robot_symulacja/worlds/: .rosbot.wbproj  ProtoLab.txt  README.txt  magazyn.txt  rosbot.wbt
