<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_symulacja</name>
  <version>2023.0.2</version>
  <description>robots ROS2 Webots.</description>

  <maintainer email="twoj.email@example.com">----</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>webots_ros2</exec_depend>
  <exec_depend>webots_ros2_driver</exec_depend>
  <exec_depend>laser_filters</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <exec_depend>rosbot_description</exec_depend>
  <exec_depend>rosbot_xl_description</exec_depend>
  <exec_depend>ros_components_description</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
