<?xml version="1.0"?>
<package format="3">
  <name>motor_control</name>
  <version>0.0.0</version>
  <description>Multi-motor control with GUI using ROS 2 and GPIO</description>

  <maintainer email="your-email@example.com">your-name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>PyQt5</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
